examples/nameresolution/errors.an
not_an_error = 1

main () =
    // Not a name resolution error at least. This isn't testing the type checker
    not_an_error is_an_error

    fn a b -> a + c + b

foo a b =
    bar c d =
        b

    ()

a = 2
a = 3 // already declared

// args: -e ast-r --no-color
// expected exit status: 1
// expected stdout:
// // id = c1m416_9923
// not_an_error_c1m416_9923_1 = 1
// 
// // id = c1m416_1944
// main_c1m416_1944_0 () =
//     not_an_error_c1m416_9923_1 is_an_error_?
//     fn a_4 b_5 -> (a_4 +_c0m703_2840_2 c_?) +_c0m703_2840_2 b_5
// 
// // id = c1m416_3132
// foo_c1m416_3132_0 a_1 b_2 =
//     bar_3 c_4 d_5 =
//         b_2
//     ()
// 
// // id = c1m416_7365
// a_c1m416_7365_1 = 2
// 
// // id = c1m416_4138
// a_c1m416_7365_1 = 3

// expected stderr:
// examples/nameresolution/errors.an:5:18
// 4 |     // Not a name resolution error at least. This isn't testing the type checker
// 5 |     not_an_error is_an_error	// error: `is_an_error` not found in scope
//   |                  ^^^^^^^^^^^
// 
// examples/nameresolution/errors.an:7:19
// 7 |     fn a b -> a + c + b	// error: `c` not found in scope
//   |                   ^
// 
// examples/nameresolution/errors.an:16:1
// 15 | a = 2
// 16 | a = 3 // already declared	// warning: `a` was already defined
//    | ^
// 
// Found 2 errors and 1 warning

